--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,20 @@
 *{
     margin: 0%;
     padding: 0%;
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-}
-/* nav{
-    width: 100%;
-    margin: 20px 0;
-}
-nav ul{
-    width: 100%; 
-    list-style: none;
-    margin: 0;
-    padding: 0; 
-}
-nav ul li{
-    width: 20%;
-    float: left;
-}
-
-nav ul li a{
-    display: block;
-    width: 100%;
-} */
-/* .header-container{
-    width: 100%;
-    height: 10%;
-    border: 1px solid red;
-} */
-
-/* h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, small {
+body,html{
     margin: 0;
     padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    background: transparent; 
-} */
+    min-width: 100%;
+}
+/* nav bar */
 nav{
     width: 100vw;
-    background-color: #D6EFFF;
+    /* background-color: #D6EFFF; */
+    height: 2.5rem;
+    background-color: #000;
 }
 ul{
     margin: 0%;
@@ -58,46 +29,105 @@ li{
 }
 a {
     text-decoration: none;
-    color: black;
+    color: #fff;
     font-size: 2vw;
     transition: 0.5s;
 }
 
 /* hover section */
 a:hover{
-    background-color: #C6E9FF;
+    /* background-color: #C6E9FF; */
+    background-color: rgba(185, 185, 185, 0.185);
+    border-radius: 5%;
   }
 
-/*  button{
-    display: none;
-    align-self: flex-start; 
-    text-align: start;
+/* main-content */
+.main-container{
+    width: 100vw;
+    /* border: 1px solid red; */
+    text-align: center;
+    position: relative;
+
 }
- */
+.main-container #text{
+    width: 50%;
+    resize: none;
+}
+.button-container{
+    align-items: center !important;
+    outline : none;
+    padding:1vw;
+}
+.button-container #btn{
+    width: 10%;
+    /* border-bottom-left-radius: 1%; */
+    border-radius: 4px;
+    margin: .5rem 1rem;
+    font-size: 1.1rem;
+    font-weight: 300;
+    background-color: #C6E9FF;
+}
+#text-converted{
+    width: 50%;
+    border: 1px solid blue;
+    height: 15vw;
+    position: relative;
+    left: 25%;
+    font-size: 22px;
+}
+
+/* footer container */
+.footer-container{
+    width: 100vw;
+    position: relative;
+    height: 100%;
+    /* display: flex; */
+    /* align-self: center; */
+    padding: 2% 2%;
+    text-align: center;
+}
+.footer-text{
+    display: inline-block;
+     padding-right: 5%;
+}
+hr{
+    text-decoration: line-through;
+    width: 50%;
+    text-align: center;
+    display: inline-block;
+}
 @media only screen and (max-width:500px){
-/*     button{
-        display: block;
-        padding: 2vw;
-        font-size: 3vh;
-        background-color: #AFE0FF;
-        border: none;
-        outline:none;
-        cursor: pointer;
-    }
-    ul{
-        flex-direction: column;
-    }
-    li{
-        margin: 0;
-    }
-    a{
-    display: block;
-    font-size: 4vw;
-    } */
     a {
         text-decoration: none;
         font-size: 4vw;
     }
-    
+    .main-container{
+        width: 100vw;
+        border: 1px solid red;
+        text-align: center;
+    }
+    .main-container #text{
+        width: 70%;
+        padding: 5%;
+        height: 30vh;
+        resize: none;
+    }
+    .button-container #btn{
+        width: 20%;
+        /* border-bottom-left-radius: 1%; */
+        border-radius: 4px;
+        margin: .5rem 1rem;
+        font-size: 1.1rem;
+        font-weight: 300;
+        background-color: #C6E9FF;
+    }
+    #text-converted{
+        width: 88%;
+        border: 1px solid blue;
+        height: 21vh;
+        position: relative;
+        left: 5%;
+        font-size: 15px;
+    }
 }
 
